[project]
name = "venv39"
version = "0.1.0"
description = "AutoML library suite for simultaneous use"
authors = [
    {name = "deividedc", email = "delarota.deivid@gmail.com"},
]
dependencies = [
    "flaml==2.3.4",
    "tpot==0.12.2",
    "autogluon==1.2",
    "h2o==3.46.0.7",
    "numpy==1.26.4",
    "numpydoc==1.9.0",
    "pandas==2.2.3",
    "pandocfilters==1.5.1",
    "scikit-learn==1.5.2",
    "scipy==1.13.1",
    "seaborn==0.13.2",
    "setuptools==68.2.2",
]
requires-python = "<3.10,>3.9.1"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
